netstat: Fix -ia missing multicast addresses on some interfaces

sdl_data isn't always NULL terminated

Signed-off-by: nreilly@qnx.com

PR:		288958
Reviewed by:	markj
MFC after:	1 week